--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,8 +10,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL5Dialect
     hibernate:
-      ddl-auto: create-drop
-#      ddl-auto: update
+      ddl-auto: update
   application:
     name: PAYMENT-SERVICE
 
