--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,18 +1,4 @@
-server:
-  port: 8081
 
 spring:
-  datasource:
-    url: jdbc:mysql://${DB_HOST:localhost}:3306/paymentdb
-    username: root
-    password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    database-platform: org.hibernate.dialect.MySQL5Dialect
-    hibernate:
-      ddl-auto: update
-  application:
-    name: PAYMENT-SERVICE
-
-  config:
-    import: configserver:http://localhost:9296
+  profiles:
+    acitve: dev
